# AML

./: .envrc  DEV.md  Makefile  README.md  exam.md  pairing.md  tasks.md
.github/: detect_latest_pr.ml  git-user-stats
.github/workflows/: PR.yml  PRformat.yml  PrPost.yml  master.yml
AML/: .gitignore  .zanuda  AML.opam  AML.opam.template  Makefile  dune-project  out.ll
AML/lib/ast/: ast.ml  ast.mli  dune
AML/lib/codegen/: codegen.ml  codegen.mli  dune  machine.ml  machine.mli
AML/lib/codegen/test/: CTest.ml  CTest.mli  codegen.t  dune  fac.S  fac.txt  manytests
AML/lib/infer/: dune  infer.ml  infer.mli  inferTypes.ml  inferTypes.mli
AML/lib/infer/test/: ITest.ml  ITest.mli  dune
AML/lib/middleend/: CC.ml  CC.mli  LL.ml  LL.mli  alpha.ml  anf.ml  anf.mli  anf_pp.ml  anf_pp.mli  anf_types.ml  anf_types.mli  dune
AML/lib/middleend/test/: ATest.ml  ATest.mli  Atest.ml  anf.t  dune
AML/lib/parser/: dune  parser.ml  parser.mli
AML/lib/parser/test/: PTest.ml  PTest.mli  dune
AML/lib/printer/: dune  pprinter.ml  pprinter.mli
AML/lib/shrinker/: Qcheck.ml  dune  shrinker.ml  shrinker.mli
AML/runtime/: Cargo.toml  dune  rust-toolchain.toml
AML/runtime/src/: lib.rs
AML/test_qc/: dune  test_qc.ml  test_qc.mli
OMLet/: .zanuda  Makefile  OMLet.opam  dune-project
OMLet/lib/: anf.ml  anf.mli  anfPrettyPrinter.ml  anfPrettyPrinter.mli  ast.ml  ast.mli  callf.s  codegen.ml  codegen.mli  codegenTypes.ml  codegenTypes.mli  dune  keywordChecker.mli  parser.ml  parser.mli  prettyPrinter.ml  prettyPrinter.mli  resultCounter.ml  resultCounter.mli  runtime.c  treeAnalysis.ml  treeAnalysis.mli  typedTree.mli  typesPp.ml  typesPp.mli
OMLet/many_tests/typed/: build_and_run.sh
OMLet/many_tests/typed/fac_anf_exit_code/: dune  fac_anf_exit_code.ml  fac_anf_exit_code_test.t
OMLet/many_tests/typed/fac_anf_print/: dune  fac_anf_print.ml  fac_anf_print_test.t
OMLet/many_tests/typed/fac_ll_cc/: dune  fac_cc_ll_test.t
OMLet/many_tests/typed/fac_partial_appl/: dune  fac_partial_appl.ml  fac_partial_appl_test.t
OMLet/many_tests/typed/fac_print/: dune  fac_anf_test.t  fac_print.ml  fac_print_test.t
OMLet/many_tests/typed/fib_ll_cc/: dune  fib_cc_ll_test.t
OMLet/many_tests/typed/fib_partial_appl/: dune  fib_partial_appl.ml  fib_partial_appl_test.t
OMLet/many_tests/typed/fib_print/: dune  fib_anf_test.t  fib_print.ml  fib_print_test.t
OMLet/many_tests/typed/large_print/: dune  large_anf_test.t  large_print.ml  large_print_test.t
OMLet/many_tests/typed/many_args/: dune  many_args_test.t
OMLet/repl/: dune  repl.ml
OMLet/tests/: compile.ml  dune  factorial.t  runtime.c
PudgeWithMoML/: .gitignore  .zanuda  Makefile  PudgeWithMoML.opam  dune-project
PudgeWithMoML/lib/: dune
PudgeWithMoML/lib/common/: monad.ml
PudgeWithMoML/lib/frontend/: ast.ml  astPP.ml  astPP.mli  extractIdents.ml  extractIdents.mli  generate.ml  generate.mli  inferencer.ml  inferencer.mli  keywords.ml  parser.ml  parser.mli  prettyPrinter.ml  prettyPrinter.mli  typedTree.ml  typesPp.ml
PudgeWithMoML/lib/frontend/qcheck_test/: run.ml  run.mli  shrink.ml
PudgeWithMoML/lib/middle_end/: CC.ml  CC.mli  LL.ml  LL.mli  alphaConversion.ml  alphaConversion.mli  alpha_conversion.ml  anf.ml  anf.mli  anfPP.ml  anfPP.mli
PudgeWithMoML/lib/riscv/: codegen.ml  codegen.mli  machine.ml  machine.mli
PudgeWithMoML/lib/runtime/: call_closure.s  load_gp.s  runtime.c
PudgeWithMoML/test/: anf.t  codegen.t  dune  manytests  not_typed_parse.t  not_typed_typecheck.t  parser.ml  parser.t  qcheck.t  run_anf.ml  run_qcheck.ml  runtime.t  typed_parse.t  typed_typecheck.t
XML/: .gitignore  .zanuda  Makefile  XML.opam  XML.opam.template  dune  dune-project  fact.s  out.ll
XML/lib/: dune
XML/lib/backend/: codegen.ml  codegen.mli  dune  emission.ml  emission.mli  machine.ml  machine.mli  machineIR.ml  target.ml  target.mli
XML/lib/common/: ast.ml  ast.mli  dune  parser.ml  parser.mli  pprinter.ml  pprinter.mli
XML/lib/middleend/: anf.ml  anf.mli  cc.ml  cc.mli  dune  ll.ml  ll.mli  pprinter.ml  pprinter.mli
XML/many_tests/: anf.t  cc.t  codegen.t  compiler.ml  dune  example_fact.s  ll.t  main.c  main.s  parser.ml
XML/many_tests/typed/: 001fac.cmi  001fac.cmo  typed.t
XML/repl/: REPL.ml
akaML/: .gitignore  .zanuda  Makefile  akaML.opam  akaML.opam.template  dune-project
akaML/lib/anf/: anf.ml  anf.mli  anf_core.ml  anf_core.mli  anf_pprinter.ml  dune
akaML/lib/ast/: ast.ml  ast.mli  dune
akaML/lib/inferencer/: dune  inferencer.ml  inferencer.mli
akaML/lib/middleend/: anf_core.ml  anf_core.mli  anf_pprinter.ml  anf_pprinter.mli  closure_conversion.ml  closure_conversion.mli  dune  lambda_lifting.ml  lambda_lifting.mli
akaML/lib/parser/: dune  parser.ml  parser.mli
akaML/lib/pprinter/: dune  pprinter.ml  pprinter.mli
akaML/lib/qchecker/: dune  qchecker.ml  qchecker.mli  shrinker.ml  shrinker.mli
akaML/lib/ricsv/: codegen.ml  codegen.mli  dune  machine.ml  machine.mli
akaML/lib/runtime/: dune  runtime.c
akaML/tests/: anf.t  codegen.t  dparsetree.t  dune  inference.t  pipeline.t  qchecker.t  run_qchecker.ml  test_anf.ml  test_cc.ml  test_inferencer.ml  test_ll.ml  test_parser.ml  test_parser.mli  test_pprinter.ml  test_pprinter.mli  test_riscv.ml
demo/: NewGVNtricky.ll  NewGVNtricky.t  demo.opam  demo.opam.template  dune  dune-project
demo/llvm/: 1.cpp  1.t  dune
demo/many_tests/typed/: typed.t
manytests/typed/: 010fac_anf.ml  010fibcps_ll.ml  012faccps.ml  012fibcps.ml
oMLet/: dune-project
oMLet/lib/: ast.ml  codegenTypes.ml  dune  parser.ml  prettyPrinter.ml
oMLet/repl/: dune  repl.ml
oMLet/tests/: compile.ml  dune  factorial.t
