(lang dune 3.8)

(name OMLet)

(generate_opam_files true)

(source
 (github p1onerka/oMLet))

(authors "Kotelnikova Ksenia" "Kozyreva Sofya" "Kochergin Vyacheslav")

(maintainers "Kotelnikova Ksenia" "Kozyreva Sofya" "Kochergin Vyacheslav")

(license "LGPL-3.0-or-later WITH OCaml-LGPL-linking-exception")

(package
 (name OMLet)
 (synopsis "Will be later")
 (depends
  ocaml
  (dune
   (= "3.19.1"))
  (angstrom
   (= "0.16.0"))
(ppx_inline_test :with-test)
  ppx_deriving
  qcheck-core
  bisect_ppx
  (ocamlformat :build)
  (llvm
   (= "18-shared"))
  (ppx_deriving_qcheck
   (= "0.6"))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
