(library
 (name PudgeWithMoML)
 (public_name PudgeWithMoML)
 (modules :standard)
 (libraries base angstrom qcheck-core qcheck-core.runner)
 (inline_tests)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq ppx_deriving_qcheck ppx_expect))
 (instrumentation
  (backend bisect_ppx)))

(include_subdirs qualified)
