(library
 (name CodegenTest)
 (libraries base stdio Ast Parser Pprinter Inferencer Codegen)
 (preprocess
  (pps ppx_expect))
 (inline_tests)
 (instrumentation
  (backend bisect_ppx)))

(cram
 (applies_to codegen)
 (deps
  ../../../bin/AML.exe
  ../../../runtime/libruntime.a
  ./manytests/typed/010faccps_ll.ml
  ./manytests/typed/010fibcps_ll.ml
  ./manytests/typed/012faccps.ml
  ./manytests/typed/012fibcps.ml
  ./manytests/typed/004manyargs.ml))
